# VulnForge

./: .deepsource.toml  .gitignore  Domload_intal.txt.save  LICENSE  README.md  ai_controller.py  ai_integration.py  ai_orchestrator.py  conftest.py  install_script.sh  launch_web.py  neurorift  neurorift_main.py  performance_analysis.py  rebrand.sh  recon_module.py  requirements-integration.txt  requirements-test.txt  requirements.txt  setup.py  shell.nix  test_webmod.sh  uninstall_script.sh  vulnforge  vulnforge.py  vulnforge_main.py
.idx/: dev.nix
ai_wrapper/: __init__.py  llm_engine.py  ollama_wrapper.py
configs/: neurorift_config.json  scan_config.json  security_defaults.json  tools.json
core/: Cargo.toml
core/neurorift-core/: Cargo.toml
core/neurorift-core/src/: lib.rs  main.rs
core/neurorift-core/src/python_bridge/: mod.rs
core/neurorift-core/src/security/: approval.rs  audit.rs  mod.rs
core/neurorift-core/src/session/: mod.rs
core/neurorift-core/src/state/: mod.rs
core/neurorift-core/src/websocket/: events.rs  mod.rs
docs/: AGENT_ROLES.md  INSTALLATION_PROGRESS.md  MIGRATION_GUIDE.md  NEURORIFT_README.md  QUICK_FIX.md  WEB_MODE.md  WEB_MODE_NEXTGEN.md  orchestration_guide.md
examples/: notifications.py  playbooks.json
modules/: __init__.py
prompts/: agentic_system.md  poc_generator.jinja  recon.jinja  report_summary.jinja
screen_control/: launcher.py
scripts/: analyze_results.py  diagnose_webmod.sh  install_deps.sh  install_tunnel_providers.sh  launch_web.sh  performance_analysis.py  recon_scan.py  run_ai_tests.sh  setup_repo.sh  (+1 more)
(+204 files in other folders)
